fix padding on small widths

--- a/_sass/base/_layout.scss
+++ b/_sass/base/_layout.scss
@@ -16,9 +16,12 @@ $number: 4; // for equal columns
 }
 
 .wrapper {
+  box-sizing: content-box;
   margin-right: auto;
   margin-left: auto;
   max-width: 50em;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .frontpage {
